--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<style>
+    .calculator{
+        margin-left: 10%;
+        margin-right: 10%;
+        box-shadow: 3px 5px 7px #666666;
+        border: 1px solid black;
+    }
+    @viewport{
+        zoom:  1.0;
+        width: extend-to-zoom;
+    }
+    @-ms-viewport{
+        zoom:  1.0;
+        width: extend-to-zoom;
+    }
+</style>
 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
@@ -12,7 +28,6 @@
 <body>
     <div class="container">
         <h1>Calculator</h1>
-
         <div class="calculator">
             <input type="text" name="screen" id="screen">
             <table>
